<resources>
    <string name="app_name">DroidCodeViewer</string>

    <string name="action_settings">Settings</string>
    <string name="settings_open">Open</string>
    <string name="settings_exit">Exit</string>
    <string name="settings_search">Search</string>
    <string name="settings_zoom">Zoom</string>
    
    <string name="title_activity_file">FileActivity</string>
    <string name="up_one_level">..</string>
    <string name="current_dir">.</string>

</resources>
