<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        android:id="@+id/settings_exit"
        android:title="@string/settings_exit"
        android:orderInCategory="200"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="150"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings_search"
        android:title="@string/settings_search"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings_zoom"
        android:title="@string/settings_zoom"
        android:orderInCategory="50"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings_open"
        android:title="@string/settings_open"
        android:orderInCategory="000"
        app:showAsAction="never" />



</menu>
